openshift/mariadb.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: mariadb
  name: mariadb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: mariadb
    spec:
      containers:
      - image: mariadb:10.5
        name: mariadb
        ports:
        - containerPort: 3306
        resources: {}
        volumeMounts:
        - name: mariadb
          mountPath: "/var/lib/mysql"
      volumes:
      - name: mariadb
        persistentVolumeClaim:
          claimName: mariadb
      securityContext: {}
      serviceAccount: mariadb
      serviceAccountName: mariadb
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mariadb
  name: mariadb
spec:
  ports:
  - name: mariadb
    port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    app: mariadb
  type: ClusterIP
status:
  loadBalancer: {}
