openshift/wordpress.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: wordpress
  name: wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: wordpress
    spec:
      containers:
      - name: wordpress
        # image: wordpress:5.7-php7.4-apache
        image: quay.io/tonejito/wordpress:5.7-php7.4-apache
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources: {}
        volumeMounts:
        - name: wordpress
          mountPath: "/var/www/html"
      volumes:
      - name: wordpress
        persistentVolumeClaim:
          claimName: wordpress
      securityContext: {}
      serviceAccount: wordpress
      serviceAccountName: wordpress
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: wordpress
  name: wordpress
spec:
  ports:
  - name: wordpress
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: wordpress
  type: LoadBalancer
status:
  loadBalancer: {}
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: wordpress
  name: wordpress
spec:
  tls:
    termination: edge
  to:
    kind: Service
    name: wordpress
    weight: null
